Fix: text-align to the center

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   color: white;
+  text-align: center;
 }
 
 #main h1 {
